Modified styles, including google font, colors, background image for search component and background color for cards

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
     </style>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap');
     </style>
 
     <title>Covid19 Safe Restaurants</title>
