Changed page title

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap');
     </style>
 
-    <title>Covid19 Safe Restaurants</title>
+    <title>Eat Safe Worry Less</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
